--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Generate GitHub Snake SVG
         uses: Platane/snk@master
         with:
-          github_user_name: Mavisi
+          github_user_name: oliveiraluizz
           outputs: |
             dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake-dark.svg
