--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -16,7 +16,7 @@ jobs:
         uses: Platane/snk@master
         with:
           github_user_name: oliveiraluizz
-          outputs: dist/github-contribution-grid-snake.svg
+          svg_out_path: dist/github-contribution-grid-snake.svg
 
       - name: Push to GitHub Pages
         uses: crazy-max/ghaction-github-pages@v3
