--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -9,14 +9,13 @@ jobs:
   generate:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
       - name: Generate GitHub Snake SVG
         uses: Platane/snk@master
         with:
           github_user_name: oliveiraluizz
-          svg_out_path: dist/github-contribution-grid-snake.svg
+          outputs: |
+            dist/github-contribution-grid-snake.svg
+            dist/github-contribution-grid-snake-dark.svg
 
       - name: Push to GitHub Pages
         uses: crazy-max/ghaction-github-pages@v3
